--- a/assets/css/jquery-ui.css
+++ b/assets/css/jquery-ui.css
@@ -429,14 +429,14 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset extra pad
 /*TABS*/
 .ui-tabs { position: relative;  zoom: 1; margin-bottom:40px; box-shadow: 0px 0px 10px 1px rgba(39,125,150,1); border-bottom-right-radius:0 !important; border-bottom-left-radius:0 !important; border-top-right-radius:0 !important; border-top-left-radius:0 !important;} /* position: relative prevents IE scroll bug (element with position: relative inside container with overflow: auto appear as "fixed") */
 .ui-tabs .ui-tabs-nav { margin: 0; padding: .2em .2em 0; }
-.ui-tabs .ui-tabs-nav li { list-style: none; float: left; position: relative; top: 0; margin: 1px .2em 0 0; border-bottom: 0; padding: 0; white-space: nowrap; transition: transform .3s ease-in-out; -ms-transition: -ms-transform .3s ease-in-out; -webkit-transition: -webkit-transform .3s ease-in-out; -moz-transition: -moz-transform .3s ease-in-out;}
+.ui-tabs .ui-tabs-nav li { list-style: none; float: left; position: relative; top: 0; margin: 1px .2em 0 0; border-bottom: 0; padding: 0; white-space: nowrap; transition: transform .2s ease-in-out; -ms-transition: -ms-transform .3s ease-in-out; -webkit-transition: -webkit-transform .3s ease-in-out; -moz-transition: -moz-transform .3s ease-in-out;}
 .ui-tabs .ui-tabs-nav li a { float: left; padding: .5em 1em; text-decoration: none; width:75%; }
 .ui-tabs .ui-tabs-nav li.ui-tabs-active a, .ui-tabs .ui-tabs-nav li.ui-state-disabled a, .ui-tabs .ui-tabs-nav li.ui-tabs-loading a { cursor: text; }
 .ui-tabs .ui-tabs-nav li a, .ui-tabs-collapsible .ui-tabs-nav li.ui-tabs-active a { cursor: pointer; } /* first selector in group seems obsolete, but required to overcome bug in Opera applying cursor: text overall if defined elsewhere... */
 .ui-tabs .ui-tabs-panel { display: block; border-width: 0;  background: none; }
 
 
-  	.ui-tabs-vertical .ui-tabs-nav li.ui-tabs-active{transform:scale(1.2); -moz-transform:scale(1.2); -webkit-transform:scale(1.2) -ms-transform:scale(1.2);;}
+  	.ui-tabs-vertical .ui-tabs-nav li.ui-tabs-active{transform:scale(1.2); -moz-transform:scale(1.2); -webkit-transform:scale(1.2); -ms-transform:scale(1.2);}
     .ui-tabs-vertical .ui-tabs-nav { padding: .2em ; float: left; width: 150px; }
     .ui-tabs-vertical .ui-tabs-nav li { clear: left; width: 100%; border-bottom-width: 1px !important; border-right-width: 0 !important; margin: .2em 0; }
     .ui-tabs-vertical .ui-tabs-nav li a { display:block; outline: none !important;}
